# gradewatch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  gradewatch.env.example
.github/workflows/: ci.yml
migrations/: 0001_init.sql  0002_notify_initial.sql
src/: config.rs  crypto.rs  diff.rs  error.rs  lib.rs  mailer.rs  main.rs  scheduler.rs  timefmt.rs
src/db/: mod.rs
src/portal/: cas.rs  debug.rs  fetch.rs  mod.rs  parse.rs
src/web/: mod.rs
templates/email/: change.html  change.mjml
templates/ui/: dashboard.html  status.html  user_form.html
tests/: cli.rs  portal_mock.rs  web_smoke.rs
tests/fixtures/: meine_leistungen.html  meine_leistungen_en.html
